语法检查优化