@@ -6,6 +6,7 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * Cookie工具类
@@ -38,19 +39,15 @@ public final class CookieUtil {
             return null;
         }
         String retValue = null;
-        try {
-            for (int i = 0; i < cookieList.length; i++) {
-                if (cookieList[i].getName().equals(cookieName)) {
-                    if (isDecoder) {
-                        retValue = URLDecoder.decode(cookieList[i].getValue(), "UTF-8");
-                    } else {
-                        retValue = cookieList[i].getValue();
-                    }
-                    break;
+        for (Cookie cookie : cookieList) {
+            if (cookie.getName().equals(cookieName)) {
+                if (isDecoder) {
+                    retValue = URLDecoder.decode(cookie.getValue(), StandardCharsets.UTF_8);
+                } else {
+                    retValue = cookie.getValue();
                 }
+                break;
             }
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
         }
         return retValue;
     }
@@ -69,9 +66,9 @@ public final class CookieUtil {
         }
         String retValue = null;
         try {
-            for (int i = 0; i < cookieList.length; i++) {
-                if (cookieList[i].getName().equals(cookieName)) {
-                    retValue = URLDecoder.decode(cookieList[i].getValue(), encodeString);
+            for (Cookie cookie : cookieList) {
+                if (cookie.getName().equals(cookieName)) {
+                    retValue = URLDecoder.decode(cookie.getValue(), encodeString);
                     break;
                 }
             }
@@ -142,24 +139,7 @@ public final class CookieUtil {
             } else if (isEncode) {
                 cookieValue = URLEncoder.encode(cookieValue, "utf-8");
             }
-            Cookie cookie = new Cookie(cookieName, cookieValue);
-            if (cookieMaxage > 0)
-                cookie.setMaxAge(cookieMaxage);
-            if (null != request) {// 设置域名的cookie
-                String domainName = getDomainName(request);
-                System.out.println(domainName);
-                // 检查是否为IP地址（去掉端口号后检查）
-                String hostWithoutPort = domainName;
-                if (domainName.contains(":")) {
-                    hostWithoutPort = domainName.substring(0, domainName.indexOf(":"));
-                }
-                // 如果不是localhost且不是IP地址，才设置domain
-                if (!"localhost".equals(domainName) && !hostWithoutPort.matches("\\d+\\.\\d+\\.\\d+\\.\\d+")) {
-                    cookie.setDomain(domainName);
-                }
-            }
-            cookie.setPath("/");
-            response.addCookie(cookie);
+            setCookieImpl(request, response, cookieName, cookieValue, cookieMaxage);
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -178,28 +158,32 @@ public final class CookieUtil {
             } else {
                 cookieValue = URLEncoder.encode(cookieValue, encodeString);
             }
-            Cookie cookie = new Cookie(cookieName, cookieValue);
-            if (cookieMaxage > 0) {
-                cookie.setMaxAge(cookieMaxage);
-            }
-            if (null != request) {// 设置域名的cookie
-                String domainName = getDomainName(request);
-                System.out.println(domainName);
-                // 检查是否为IP地址（去掉端口号后检查）
-                String hostWithoutPort = domainName;
-                if (domainName.contains(":")) {
-                    hostWithoutPort = domainName.substring(0, domainName.indexOf(":"));
-                }
-                // 如果不是localhost且不是IP地址，才设置domain
-                if (!"localhost".equals(domainName) && !hostWithoutPort.matches("\\d+\\.\\d+\\.\\d+\\.\\d+")) {
-                    cookie.setDomain(domainName);
-                }
-            }
-            cookie.setPath("/");
-            response.addCookie(cookie);
+            setCookieImpl(request, response, cookieName, cookieValue, cookieMaxage);
         } catch (Exception e) {
             e.printStackTrace();
         }
+    }
+
+    private static void setCookieImpl(HttpServletRequest request, HttpServletResponse response, String cookieName, String cookieValue, int cookieMaxage) {
+        Cookie cookie = new Cookie(cookieName, cookieValue);
+        if (cookieMaxage > 0) {
+            cookie.setMaxAge(cookieMaxage);
+        }
+        if (null != request) {// 设置域名的cookie
+            String domainName = getDomainName(request);
+            System.out.println(domainName);
+            // 检查是否为IP地址（去掉端口号后检查）
+            String hostWithoutPort = domainName;
+            if (domainName.contains(":")) {
+                hostWithoutPort = domainName.substring(0, domainName.indexOf(":"));
+            }
+            // 如果不是localhost且不是IP地址，才设置domain
+            if (!"localhost".equals(domainName) && !hostWithoutPort.matches("\\d+\\.\\d+\\.\\d+\\.\\d+")) {
+                cookie.setDomain(domainName);
+            }
+        }
+        cookie.setPath("/");
+        response.addCookie(cookie);
     }
 
     /**
@@ -209,7 +193,7 @@ public final class CookieUtil {
         String domainName = null;
         // 通过request对象获取访问的url地址
         String serverName = request.getRequestURL().toString();
-        if (serverName == null || serverName.equals("")) {
+        if (serverName.isEmpty()) {
             domainName = "";
         } else {
             // 将url地下转换为小写
@@ -244,7 +228,7 @@ public final class CookieUtil {
             if (len > 3) {
                 // www.xxx.com.cn
                 domainName = domains[len - 3] + "." + domains[len - 2] + "." + domains[len - 1];
-            } else if (len <= 3 && len > 1) {
+            } else if (len > 1) {
                 // xxx.com or xxx.cn
                 domainName = domains[len - 2] + "." + domains[len - 1];
             } else {
@@ -252,7 +236,7 @@ public final class CookieUtil {
             }
         }
 
-        if (domainName != null && domainName.indexOf(":") > 0) {
+        if (domainName.indexOf(":") > 0) {
             String[] ary = domainName.split("\\:");
             domainName = ary[0];
         }
